# ChangeLog for dev-php5/suhosin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/suhosin/ChangeLog,v 1.10 2007/03/10 23:09:53 yoswink Exp $

  10 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org> suhosin-0.9.17.ebuild:
  Stable on alpha wrt security #153911

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> ChangeLog:
  Fix manifest

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> suhosin-0.9.17.ebuild:
  Stable on sparc wrt security #153911

  06 Mar 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  suhosin-0.9.17.ebuild:
  Stable on ppc wrt bug #153911.

  06 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  suhosin-0.9.17.ebuild:
  stable x86; security bug 153911

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> suhosin-0.9.17.ebuild:
  Stable on ppc64; bug #153911

  06 Mar 2007; Jeroen Roovers <jer@gentoo.org> suhosin-0.9.17.ebuild:
  Stable for HPPA (bug #153911).

  05 Mar 2007; Luca Longinotti <chtekk@gentoo.org> suhosin-0.9.17.ebuild:
  Keyword on amd64 wrt bug #153911.

*suhosin-0.9.17 (05 Mar 2007)

  05 Mar 2007; Luca Longinotti <chtekk@gentoo.org> -suhosin-0.9.16.ebuild,
  +suhosin-0.9.17.ebuild:
  Version bump.

*suhosin-0.9.16 (04 Mar 2007)

  04 Mar 2007; Luca Longinotti <chtekk@gentoo.org> +metadata.xml,
  +suhosin-0.9.16.ebuild:
  Add Suhosin.
