@@ -1,0 +1,3 @@
+MD5 c9cc3ce1e07516346a3713fc658d74d2 suhosin-0.9.18.tgz 110421
+RMD160 65ac81383d881da0d827378bc3019e8c692313ac suhosin-0.9.18.tgz 110421
+SHA256 85e5f5af4ba6cbbe2e20a2cc2d808ea8f87bfcc4ded04c5ae2e5e257478d8131 suhosin-0.9.18.tgz 110421
